Feature HTML, affichage des dicty, affichage des traductions et de la liste en vrac

--- a/trip_phrase/phraseList/templates/phraseList/base.html
+++ b/trip_phrase/phraseList/templates/phraseList/base.html
@@ -4,6 +4,8 @@
     <head>
         <title>Trip Phrase</title>
         <link rel="stylesheet" href="{% static 'static/styles.css' %}" />
+
+        <h1><a href = '{% url "select-dicty"%}'> Selection du dictionnaire </a></h1>
     </head>
     <body>
         {% block content %}{% endblock %}
