--- a/trip_phrase/phraseList/templates/phraseList/select_dicty.html
+++ b/trip_phrase/phraseList/templates/phraseList/select_dicty.html
@@ -5,8 +5,8 @@
 
 <ul>
 
-{% for langue in languages %}
- <li>{{ langue }}</li>
+{% for dicty in dictys %}
+ <li><a href="{% url 'dicty-home' dicty.id %}">{{ dicty.title }}</a></li>
 {% endfor %} 
 
 </ul>
